# hw4

./: hw4.py  notebook.ipynb
new_library/: README.md  pyproject.toml
new_library/src/diabetes_predictor/: data_preprocessing.py  model_and_prediction.py
